# tenable-attack-mapper

./: .env.example  .env_test  .gitignore  Dockerfile  README.md  pyproject.toml  sc-live-layer.json  uninstall.sh
.claude-plugin/: plugin.json
.claude/skills/show-matrix/: SKILL.md
agents/: attack-mapper.md
data/: README.md  attack_techniques.json  capec_attack.json  cve_cwe.json  cwe_attack.json  cwe_capec.json
docs/: mapping.md  navigator.md  usage.md
examples/: sample-layer.json
src/tenable_attack_mapper/: __init__.py  cli.py  config.py  models.py  navigator.py  pipeline.py  report.py  sc_client.py
src/tenable_attack_mapper/mapping/: __init__.py  deterministic.py  reconcile.py  semantic.py
src/tenable_attack_mapper/mcp/: __init__.py  server.py
tests/: conftest.py  test_deterministic.py  test_navigator.py  test_reconcile.py
